--- a/Ping_Pong/Vagrantfile
+++ b/Ping_Pong/Vagrantfile
@@ -20,7 +20,6 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = machine[:hostname]
 
       node.vm.network "private_network", ip: machine[:ip]
-
       node.vm.network "forwarded_port", guest: 22, host: machine[:ssh_port], id: "ssh"
 
       node.vm.provision "shell", inline: <<-SHELL
@@ -28,12 +27,9 @@ Vagrant.configure("2") do |config|
         sudo apt-get install -y software-properties-common
         sudo add-apt-repository universe -y
         sudo apt-get update -y
-
         sudo apt-get install -y docker.io
-
         sudo systemctl enable docker
         sudo systemctl start docker
-
         sudo usermod -aG docker vagrant
       SHELL
 
@@ -44,6 +40,15 @@ Vagrant.configure("2") do |config|
         vb.customize ["modifyvm", :id, "--cpus", 2]
       end
 
+      if machine[:hostname] == "Node1"
+        node.vm.provision "file", source: "./portscanner.sh", destination: "/home/vagrant/portscanner.sh"
+        node.vm.provision "shell", inline: <<-SHELL
+          chmod +x /home/vagrant/portscanner.sh
+          chown vagrant:vagrant /home/vagrant/portscanner.sh
+        SHELL
+      end
+
     end
   end
 end
+
